--- a/TourismDB/App.config
+++ b/TourismDB/App.config
@@ -21,4 +21,32 @@
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="itext.commons" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.2.4.0" newVersion="7.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="itext.kernel" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.18.0" newVersion="7.1.18.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="itext.layout" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.18.0" newVersion="7.1.18.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="itext.io" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.18.0" newVersion="7.1.18.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="itext.forms" publicKeyToken="8354ae6d2174ddca" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.1.18.0" newVersion="7.1.18.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
