--- a/TourismDB/TourismDB.csproj
+++ b/TourismDB/TourismDB.csproj
@@ -168,6 +168,12 @@
     <Compile Include="AddReservationsForm.Designer.cs">
       <DependentUpon>AddReservationsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddStaffForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddStaffForm.Designer.cs">
+      <DependentUpon>AddStaffForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddToursForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -198,6 +204,12 @@
     <Compile Include="FormUpdateReservations.Designer.cs">
       <DependentUpon>FormUpdateReservations.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormUpdateStaff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUpdateStaff.Designer.cs">
+      <DependentUpon>FormUpdateStaff.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormUpdateTours.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +227,9 @@
     <EmbeddedResource Include="AddReservationsForm.resx">
       <DependentUpon>AddReservationsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AddStaffForm.resx">
+      <DependentUpon>AddStaffForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddToursForm.resx">
       <DependentUpon>AddToursForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -229,6 +244,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormUpdateReservations.resx">
       <DependentUpon>FormUpdateReservations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUpdateStaff.resx">
+      <DependentUpon>FormUpdateStaff.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUpdateTours.resx">
       <DependentUpon>FormUpdateTours.cs</DependentUpon>
